New A1 slite deck

--- a/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img2.html
+++ b/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img2.html
@@ -51,7 +51,7 @@
 	<div class="title">TEAM</div>
 	<div class="slideBody" style='padding-left: 10px; padding-top: 0px;'>
 		<ul style='padding-left: 200px;'>
-	     <li>5 people, 2 PhDs, all based in Mountain View, CA, 50+ yrs experience</li>
+	     <li>2 PhDs, 50+ yrs software experience, 6 people</li>
 		 <!--<ul>
 			<li>Microsoft, Yahoo, KPMG, Arthur Andersen</li>
 		 </ul>-->
@@ -60,27 +60,30 @@
 
 <center>
 	<h3>Executive Members</h3>
-  <div class="photos" style='font-size: 20px; width: 900px'>
+  <div class="photos" style='font-size: 20px; width: 1100px'>
         <ul style='padding-left: 10px; margin-left:0px;'>
             <li>
 				<div><a href="#"><img src="../img/Team_Jim.jpg"/></a></div>
 				<div class='teamMember'>CEO: Jim Dukhovny</div>
-				<div class='teamMember'>Architect of Windows 8 schema</div>				
-				<div class='teamMember'>Author of current SF nightclub business model</div>
+				<div class='teamMember'>Architect of Windows 8 schema</div>	
 				<div class='teamMember'>10 yrs business owner</div>
             </li>
 
             <li><span><a href="#"><img src="../img/Team_Andrew.jpg"/></a></span>
-            <div class='teamMember'>VP of Business: Andrew Strigin</div>
+            <div class='teamMember'>Product Development: Andrew Strigin</div>
             <div class='teamMember'>PhD in Computer Science</div>			
             <div class='teamMember'>Co-Founder of 2 startups</div>
-            </li>		
-			
+            </li>				
 
             <li><a href="#"><img src="../img/Team_Michael.jpg" /></a>
             <div class='teamMember'>CTO: Michael Arov</div>
             <div class='teamMember'>PhD in Physics</div>
             <div class='teamMember'>15 yrs software experience</div>
+            </li>				
+
+            <li><a href="#"><img src="../img/Team_Irene.jpg" /></a>
+            <div class='teamMember'>VP of Business: Irina Lozhkina</div>
+            <div class='teamMember'>MBA UC Berkeley student</div>
             </li>
         </ul>
  </div>
