--- a/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img3.html
+++ b/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img3.html
@@ -14,18 +14,12 @@
 <body>
 <center>
 	<div class="title">COMPANY</div>
-	<div class="slideBody" style='font-size:35px; line-height: 40px'>
+	<div class="slideBody" style='font-size:25px; line-height: 30px'>
 		<ul>				
-				<li>Remote Presentations company</li>
-				<li>Mountain View, California</li>
-				<li>1 year old, looking for Seed Round</li>
-				<li>Verbal and written letters of intent from:</li>
-		      	<ul style='font-size: 30px'>
-					<li>Online Education companies</li>
-					<li>Conference organizers</li>
-					<li>Stanford, Berkeley university students</li>
-					<li>Inside sales</li>
-			    </ul>
+				<li>Remote Presentations</li>
+				<li>Based in Mountain View, California</li>
+				<li>6 month old, looking for Seed Round</li>
+				<li>Written/verbal letters of intent from: Online Education companies, Conference organizers, Stanford, Berkeley students, Inside sales</li>
 				<li>Launch in upcoming months</li>
 		</ul>
 	</div>
