--- a/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img6.html
+++ b/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img6.html
@@ -14,23 +14,23 @@
 <body>
 <center>
 	<div class="title">COMPETITION</div>
-	<div class="slideBody" style='font-size:45px; line-height: 50px'>
+	<div class="slideBody">
 		<ul>
 				<li><u>Competitors:</u></li>
 					<ul>
-						<li>Powerpoint, SlideShare, Prezi, WebEx (...)</li>
+						<li>PowerPoint, SlideShare, Prezi, Sliderocket, WebEx, ,Skype (...)</li>
 					</ul>
 				<li><u>Differentiators:</u></li>
 				<ul>
-					<li>Live web presentation, not storage and not desktop sharing</li>
-					<li>No hardware, software, login required!</li>
-					<li>All web 2.0 features</li>
-					<li>Infinite amount of data per slide</li>
+					<li>Complete set of tools seemlesly integrated in one product</li>
+					<li>Ease-of-Use for non-techies</li>
+					<li>Focused on <i>live</i> presentation (not desktop sharing, not storage)</li>
+					<li>Ease-of-embedding into other products</li>
 				</ul>				
-				<li><u>Advantage / Barriers to entry:</u></li>
+				<li><u>Barriers to entry</u></li>
 					<ul>
-						<li>1st to Market (because we <b>created new market!</b>)</li>
-						<li>Patented technology allowing to do <i>same features</i> in days when other companies take years</li>
+						<li>2 provisional patents</li>
+						<li>Technology allowing to do <i>features</i> in days when other companies take years</li>
 					</ul>
 		</ul>
 	</div>
