--- a/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img8.html
+++ b/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img8.html
@@ -3,15 +3,38 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Slite: Embedded Website 1</title>
+  <title>Slite: Business Model and Monitization</title>
   <link rel="stylesheet" type="text.css" href="./css/slide.css">
-  <style>
-    body, html, center {
-      margin: 0; padding: 0; height: 100%; overflow: hidden;
-    }
-  </style>
 </head>
 <body>
- <iframe style="overflow:hidden" height="100%" width="100%" src="http://www.frys.com/product/8259476"></iframe>
+<center>
+	<div class="title" style='padding-top: 20px'>MONETIZATION</div>
+	<div class="slideBody">
+		<ul>
+	      <li>FREEMEUM</li>
+		  <ul style='font-size: 0.8em'>
+			<li>Examples: extra storage, custom url, private presentation, unlimited video</li>
+		  </ul>
+	     <li>REVENUE SHARE</li>
+		 <ul style='font-size: 0.8em'>
+			<li>Embedding product inside partner’s platforms</li>
+		 </ul>
+		</ul>
+	</div>
+	
+	<div class="title" style='padding-top: 20px'>BUSINESS MODEL</div>	
+	<div class="slideBody">		
+	<ul>
+	      <li>SAAS</li>
+		  <ul style='font-size: 0.8em'>
+			<li>Direct sales from website</li>
+		  </ul>
+	      <li>WHITE LABELING</li>
+		  <ul style='font-size: 0.8em'>
+			<li>Licensing of internal Intranet solution</li>
+		  </ul>
+		</ul>
+	</div>
+</center>
 </body>
 </html>
