--- a/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img9.html
+++ b/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img9.html
@@ -3,21 +3,26 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Slite: Live Data</title>
+  <title>Slite: Go To Market</title>
   <link rel="stylesheet" type="text.css" href="./css/slide.css">
-  <style>
-    body, html, center {
-      margin: 0; padding: 0; height: 100%; overflow: hidden;
-    }
-  </style>
 </head>
-<body style="margin: 0">
+<body>
 <center>
-  <div class="title">FEATURE: Live Data In Slide</div>
-  <div style="width: 700px; height: 1500px; overflow: hidden; margin-top: 150px;">
-    <iframe id='liveStats' src='http://www.worldometers.info' height = 400px; width = 650px scrolling = 'no'  style="position: relative; left: -30%; top: -18%"></iframe>
-  </div>
-  
+	<div class="title">GO TO MARKET STRATEGY</div>
+	<div class="slideBody">
+		<ul>
+			<li>Embedding into partner products with large user base (ex. Coursera, CNN),</li>
+				<ul style='font-size: 0.8em'>
+					<li>Coursera</li>
+					<li>CNN</li>
+					<li>PeopleSoft</li>
+					<li>...</li>
+				</ul>
+			<li>Referral rewards in upgraded features and storage</li>
+			<li>Free usage for some conferences and education institutions</li>
+			<li>“Powered by Slite” visible on every slide</li>
+		</ul>
+	</div>
 </center>
 </body>
 </html>
