--- a/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img7.html
+++ b/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img7.html
@@ -3,21 +3,29 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Slite: Other companies</title>
+  <title>Slite: Other features</title>
   <link rel="stylesheet" type="text.css" href="./css/slide.css">
-  <style>
-  	ul{
-  		padding-top:0px; padding-bottom: 0px; margin-bottom: 0px;
-  	}
-  </style>
 </head>
 <body>
 <center>
-	<div class="title" style='padding-bottom: 10px; margin-bottom: 10px;'>FUNDED COMPANIES - WHOLE BUSINESS <u>ONE</u> OF OUR FEATURES</div>
-	<div class="slideBody" style='padding-top:50px;'>
-	<center>
-	      <img src='../img/slite_competitors.gif' style='width: 900px; height: 500px; padding: 0px; margin: 0px;'>
-  </center>
+	<div class="title">FEATURES</div>
+	<div class="slideBody">
+		<ul>
+			<li>Live data in slites</li>
+			<li>Social Interaction inside presentation: comment, share</li>
+			<li>Live polls and quizes in presentation</li>
+			<li>Notes stored with presentation</li>
+			<li>Video chat</li>
+			<li>Close Captioning</li>
+			<li>Free "Remote Control" mobile app</li>
+				<ul style='font-size: 0.8em'>
+					<li>laser pointer</li>
+					<li>drawing</li>
+					<li>clicker</li>
+					<li>voice control</li>
+				</ul>
+			<li>Comming soon: screen sharing, live translation into other languages, and more ...</li>
+		</ul>
 	</div>
 </center>
 </body>
