Several small fixes
1. Requests are properly filtered on slideID.
2. Scrolling in comments
restored.

--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -99,6 +99,7 @@
 
 	function showHideComments(){
 		$("#comments").slideToggle();
+		$("#comments").css('overflow','scroll');
 		var label = $("#chatOpenCloseLabel");
 		if(label.html() == "Open"){
 			$("#chatOpenCloseLabel").html("Close");
