Fix for videochat close button
When webcam is not present there is no video boxes to remove

--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -194,7 +194,7 @@
 			
 			// remove the video window on closing the panel
 			var videosContainer = document.getElementById('videos-container');
-			videosContainer.removeChild(videosContainer.firstChild);
+			if(videosContainer.firstChild) videosContainer.removeChild(videosContainer.firstChild);
 			
 			isVideoOn = false;
 		}		
