--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -48,7 +48,7 @@
 
     socket.on('news', function (data) {
 
-	if (document.location.pathname == "/"+ data.slideID) {
+	if ( (document.location.pathname == "/"+ data.slideID) || (document.location.pathname == "/"+ data.slideID + "/") ) {
 		var button = data.hello-1;
 
 		console.log(button);
