Removed from A1 slidedeck all live data slides.

--- a/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img11.html
+++ b/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img11.html
@@ -3,21 +3,26 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Slite: Live Data</title>
+  <title>Slite: Asking</title>
   <link rel="stylesheet" type="text.css" href="./css/slide.css">
-  <style>
-    body, html, center {
-      margin: 0; padding: 0; height: 100%; overflow: hidden;
-    }
-  </style>
 </head>
-<body style="margin: 0">
+<body>
 <center>
-  <div class="title">FEATURE: Live Data In Slide</div>
-  <div style="width: 700px; height: 1500px; overflow: hidden; margin-top: 150px;">
-    <iframe id='liveStats' src='http://www.worldometers.info' height = 400px; width = 650px scrolling = 'no'  style="position: relative; left: -30%; top: -18%"></iframe>
-  </div>
-  
+	<div class="title">NEED TO RAISE</div>
+	<div class="slideBody">
+		<ul>
+	      <li>$900,000 for 9 month</li>
+		      <ul>
+			      <li>$600,000 software development</li>
+			      <li>$100,000 business development</li>
+			      <li>$200,000 fees and infrastructure</li>
+		  	</ul>
+	      <li>Expected Launch: 4 month</li>
+	      <li>Profitable: 12 - 18 month</li>
+	  </ul>
+
+	<!--<img src="../img/slite_timeline.jpg" style='width: 800px; height: 300px;'>-->
+	</div>
 </center>
 </body>
 </html>
