--- a/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img10.html
+++ b/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img10.html
@@ -3,15 +3,26 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Slite: Embedded Website 1</title>
+  <title>Slite: Go To Market</title>
   <link rel="stylesheet" type="text.css" href="./css/slide.css">
-  <style>
-    body, html, center {
-      margin: 0; padding: 0; height: 100%; overflow: hidden;
-    }
-  </style>
 </head>
 <body>
- <iframe style="overflow:hidden" height="100%" width="100%" src="http://www.frys.com/product/8259476"></iframe>
+<center>
+	<div class="title">GO TO MARKET STRATEGY</div>
+	<div class="slideBody">
+		<ul>
+			<li>Embedding into partner products with large user base (ex. Coursera, CNN),</li>
+				<ul style='font-size: 0.8em'>
+					<li>Coursera</li>
+					<li>CNN</li>
+					<li>PeopleSoft</li>
+					<li>...</li>
+				</ul>
+			<li>Referral rewards in upgraded features and storage</li>
+			<li>Free usage for some conferences and education institutions</li>
+			<li>“Powered by Slite” visible on every slide</li>
+		</ul>
+	</div>
+</center>
 </body>
 </html>
