--- a/AWS_Website/www_static/remote/index.html
+++ b/AWS_Website/www_static/remote/index.html
@@ -1,7 +1,8 @@
 ﻿<!DOCTYPE HTML>
 <html>
 	<head>
-    <meta charset="utf-8" content="user-scalable=yes">
+    <meta charset="utf-8" content="user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=0.5, maximum-scale=1.0, user-scalable=no" />
     <title>SENDER</title>
     <link rel="stylesheet" type="text/css" href="./css/index.css">
     <script src="/socket.io/socket.io.js"></script>
