Restyled REMOTE CONTROL for web

--- a/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img5.html
+++ b/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img5.html
@@ -17,13 +17,14 @@
 	<div class="slideBody">
 		<img src="../img/SLITE_LOGO.gif" width=100px/>
 		<ul>
-				<li>Powerpoint meets Facebook meets Skype meets Web 2.0</li>
+				<!--<li>Powerpoint meets Facebook meets Skype meets Web 2.0</li>-->
 				<li>In-browser remote presentation platform</li>
 				<ul>
 					<li>Web Portal for live presentation, discussion and video communication inside presentation</li>
-					<li>Remote Control iPhone and Android app </li>
-					<li>Simple API for embedding into other products </li>
-				</ul>
+				</ul>				
+				<li>Remote Control iPhone and Android app </li>
+				<li>Simple API for embedding into other products </li>
+			
 		      	<!--<ul style='font-size:30px;'>
 		      		<li>Commenting, Interactive, Sharing</li>
 		      	</ul>-->
