--- a/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img6.html
+++ b/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img6.html
@@ -24,7 +24,7 @@
 				<ul>
 					<li>Complete set of tools seemlesly integrated in one product</li>
 					<li>Ease-of-Use for non-techies</li>
-					<li>Focused on <i>live</i> presentation (not desktop sharing, not storage)</li>
+					<li>Focused on <i>live</i> presentation (not desktop sharing, not meeting solutions)</li>
 					<li>Ease-of-embedding into other products</li>
 				</ul>				
 				<li><u>Barriers to entry</u></li>
