--- a/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img9.html
+++ b/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img9.html
@@ -3,36 +3,24 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Slite: Business Model and Monitization</title>
+  <title>Slite: Go To Market</title>
   <link rel="stylesheet" type="text.css" href="./css/slide.css">
 </head>
 <body>
 <center>
-	<div class="title" style='padding-top: 20px'>MONETIZATION</div>
+	<div class="title">GO TO MARKET STRATEGY</div>
 	<div class="slideBody">
 		<ul>
-	      <li>FREEMEUM</li>
-		  <ul style='font-size: 0.8em'>
-			<li>Examples: extra storage, custom url, private presentation, unlimited video</li>
-		  </ul>
-	     <li>REVENUE SHARE</li>
-		 <ul style='font-size: 0.8em'>
-			<li>Embedding product inside partner’s platforms</li>
-		 </ul>
-		</ul>
-	</div>
-	
-	<div class="title" style='padding-top: 20px'>BUSINESS MODEL</div>	
-	<div class="slideBody">		
-	<ul>
-	      <li>SAAS</li>
-		  <ul style='font-size: 0.8em'>
-			<li>Direct sales from website</li>
-		  </ul>
-	      <li>WHITE LABELING</li>
-		  <ul style='font-size: 0.8em'>
-			<li>Licensing of internal Intranet solution</li>
-		  </ul>
+			<li>Embedding into partner products with large user base (ex. Coursera, CNN),</li>
+				<ul style='font-size: 0.8em'>
+					<li>Coursera</li>
+					<li>CNN</li>
+					<li>PeopleSoft</li>
+					<li>...</li>
+				</ul>
+			<li>Referral rewards in upgraded features and storage</li>
+			<li>Free usage for some conferences and education institutions</li>
+			<li>“Powered by Slite” visible on every slide</li>
 		</ul>
 	</div>
 </center>
