--- a/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img10.html
+++ b/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img10.html
@@ -3,25 +3,25 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Slite: Go To Market</title>
+  <title>Slite: Asking</title>
   <link rel="stylesheet" type="text.css" href="./css/slide.css">
 </head>
 <body>
 <center>
-	<div class="title">GO TO MARKET STRATEGY</div>
+	<div class="title">NEED TO RAISE</div>
 	<div class="slideBody">
 		<ul>
-			<li>Embedding into partner products with large user base (ex. Coursera, CNN),</li>
-				<ul style='font-size: 0.8em'>
-					<li>Coursera</li>
-					<li>CNN</li>
-					<li>PeopleSoft</li>
-					<li>...</li>
-				</ul>
-			<li>Referral rewards in upgraded features and storage</li>
-			<li>Free usage for some conferences and education institutions</li>
-			<li>“Powered by Slite” visible on every slide</li>
-		</ul>
+	      <li>$900,000 for 9 month</li>
+		      <ul>
+			      <li>$600,000 software development</li>
+			      <li>$100,000 business development</li>
+			      <li>$200,000 fees and infrastructure</li>
+		  	</ul>
+	      <li>Expected Launch: 4 month</li>
+	      <li>Profitable: 12 - 18 month</li>
+	  </ul>
+
+	<!--<img src="../img/slite_timeline.jpg" style='width: 800px; height: 300px;'>-->
 	</div>
 </center>
 </body>
